# GrooveKit

./: .gitignore  CMakeLists.txt  README.md
apps/GrooveKit/: CMakeLists.txt
src/AppEngine/: AppEngine.cpp  AppEngine.h  CMakeLists.txt  TrackManager.cpp  TrackManager.h
src/AudioEngine/: AudioEngine.h
src/MIDIEngine/: MIDIEngine.cpp
src/PluginManager/: PluginManager.cpp  PluginManager.h
src/UI/: CMakeLists.txt
src/UI/Plugins/Synthesizer/: MorphSynthPlugin.cpp  MorphSynthPlugin.h
src/UI/PopupWindows/PianoRollComponents/: NoteGridComponent.cpp  PianoRollEditor.cpp  PianoRollEditor.h
src/UI/TrackView/: PlayheadComponent.cpp  PlayheadComponent.h  TrackComponent.cpp  TrackComponent.h  TrackEditView.cpp  TrackEditView.h  TrackHeaderComponent.cpp  TrackHeaderComponent.h  TrackListComponent.cpp  TrackListComponent.h
